Add 3 buttons, each for Rock, Paper, & Scissors

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-        <script src="js/rps.js"></script>
+        <script src="js/rps.js" defer></script>
     </head>
 
     <body>
-
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
     </body>
 </html>
