Put 3 buttons inside a div with .container

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
         <script src="js/rps.js" defer></script>
     </head>
 
-    <body>
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+    <body> 
+        <div class="container">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
     </body>
 </html>
