--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="css/style.css">
         <script src="js/rps.js" defer></script>
     </head>
 
-    <body> 
+    <body>
+        <h1>Rock - Paper - Scissors</h1>
+        <p>It's between you and the mighty computer. Whoever gets 5 points first will win the game. DO YOU HAVE WHAT IT TAKES?</p>
+        <p>Choose your weapon below:</p>
         <div class="container">
             <button>Rock</button>
             <button>Paper</button>
