Change up some elements & add more divs with class

--- a/index.html
+++ b/index.html
@@ -9,12 +9,36 @@
 
     <body>
         <h1>Rock - Paper - Scissors</h1>
-        <p>It's between you and the mighty computer. Whoever gets 5 points first will win the game. DO YOU HAVE WHAT IT TAKES?</p>
-        <p>Choose your weapon below:</p>
-        <div class="container">
+        <p>It's between you and the mighty computer. Whoever gets 5 points first will win the game. <strong>DO YOU HAVE WHAT IT TAKES?</strong></p>
+        <h2>... Choose your weapon below ...</h2>
+        <div>
             <button>Rock</button>
             <button>Paper</button>
             <button>Scissors</button>
+        </div>
+        <div class="section-1">
+            <div>
+                You picked
+                <div class="container-1"></div>
+            </div>
+            <div>
+                Computer picked
+                <div class="container-2"></div>
+            </div>
+            <div>
+                Round result
+                <div class="container-3"></div>
+            </div>
+        </div>
+        <div class="section-2">
+            <div>
+                Player Score
+                <div class="container-4"></div>
+            </div>
+            <div>
+                Computer Score
+                <div class="container-5"></div>
+            </div>
         </div>
     </body>
 </html>
