--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
                 <div class="container-5"></div>
             </div>
         </div>
+        <footer>&copy; Thinh Phan 2022 &#129513;</footer>
     </body>
 </html>
