Update footer section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <div class="container-5"></div>
             </div>
         </div>
-        <footer>&copy; Thinh Phan 2022 &#129513;</footer>
+        <footer>&copy; Thinh Phan, 
+            <script>
+                document.write(new Date().getFullYear())
+            </script> 
+            <a href="https://github.com/teephan91" target="_blank"><img class="github" src="img/github_logo.png" alt="Github logo"></a>
+        </footer>
     </body>
 </html>
